# DjangoProjectWeb

./: .gitignore  LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml
DjangoProjectWeb/: asgi.py  settings.py  urls.py  wsgi.py
WebProjecte/: admin.py  apps.py  forms.py  models.py  pytest.ini  run_e2e_tests.sh  signals.py  tests.py  urls.py  utils.py  views.py
WebProjecte/management/commands/: clear_cards.py  delete_users.py  seed_cards.py  seed_rarities.py
WebProjecte/migrations/: 0001_initial.py  0002_alter_profile_password_alter_profile_profile_image.py  0002_profile_friends.py  0003_friendrequest.py  0003_remove_profile_password_alter_profile_profile_image.py  0004_remove_card_image_url_remove_cardset_image_url_and_more.py  0005_alter_card_image_alter_cardset_image.py  0005_usercard.py  0006_merge_20250524_1758.py  0007_alter_card_image_alter_cardset_image_and_more.py  0008_packstatus.py
WebProjecte/services/: profile_image.py
WebProjecte/static/: add_card.css  colection.css  collection.css  profile.css  script.js  script_usuario.js  style.css
WebProjecte/templates/: add_card.html  base.html  card.html  cards.html  coleccion.html  collection.html  como_jugar.html  home.html  how_to_play.html  login.html  open_pack.html  pack_opened.html  profile.html  register.html  select_pack.html
WebProjecte/templates/RDFa/: card_detail.html  cardset_detail.html  collection.html  profile.html
WebProjecte/templates/friends/: friends_list.html
WebProjecte/tests/e2e/: base.py  requirements_test.txt  (+4 more)
staticfiles/: card.css  card.js  profile.css  script.js
