[project]
name = "djangoprojectweb"
version = "0.1.0"
description = ""
authors = [
    {name = "naimsg16",email = "naimsaadigallego@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
